[package]
name = "xfer"
version = "0.1.0"
edition = "2021"
authors = ["Mutasim <mutisim.top>"]
description = "A simple file transfer utility for terminal lovers"
readme = "README.md"
license = "MIT"

[dependencies]
clap = "2.33"
colored = "2.0"
indicatif = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
dirs = "4.0"
